<resources>
    <string name="app_name">Calculadora</string>
    <string name="plus">+</string>
    <string name="_0">0</string>
    <string name="_00">00</string>
    <string name="equals">=</string>
    <string name="division">/</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="multiplication">*</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="minus">-</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="mc">MC</string>
    <string name="mr">MR</string>
    <string name="ms">MS</string>
    <string name="m">M+</string>
    <string name="mMINUS">M-</string>
    <string name="porcentaje">%</string>
    <string name="ce">CE</string>
    <string name="c">C</string>
    <string name="punto">.</string>
</resources>